--- a/base/templates/html/newsForm.html
+++ b/base/templates/html/newsForm.html
@@ -3,7 +3,7 @@
         <h3 class="text-white m-0"><b>Get the latest Wenear Health news!</b></h3>
         <p>Sign up for our <b>newsletter</b></p>
         <div style="display:inline-flex; text-align:center; padding:5px">
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="../../static/logo.jpg" width="200px"alt="..." />
+            <img class="img-fluid rounded mb-4 mb-lg-0" src="../../static/photos/logo.jpg" width="200px"alt="..." />
             {% load crispy_forms_tags %}
             <form action="{%url 'base:newsletter'%}" method="post" style="margin-top: 20px; margin-left: 10px;">
                 {%csrf_token%}
