--- a/base/templates/html/product_id.html
+++ b/base/templates/html/product_id.html
@@ -70,41 +70,7 @@
                 </div>
             </div>            
         </div>
-        <div class="container px-4 px-lg-5">
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-5">
-                    <h2 class="font-weight-light">Review</h2>
-                    <div class="col-lg-7">
-                        <div>{{product_list.title}}</div>
-                        <div>{{product_list.id}}</div>
-                        <form method="post" class="mb-4" action="{% url 'base:review_create' product_list.id%}">
-                            {% csrf_token %}     
-                            <textarea id="content" name="content" class="form-control" rows="3"
-                            placeholder="내용을 입력해주세요."></textarea>
-                            <button type="submit" class="btn btn-primary">submit</button>
-                        </form>
-
-                        <div>
-                            {% for comment in content_list.content_set.all %}
-                            <div class="fw-bold">{{ comment.author.username }} &nbsp&nbsp
-                                {{ comment.create_date }}
-                                {{ comment.content }}
-                            </div>
-                            {%endfor%}
-                        </div>
-                    </div>
-
-                    <!-- <span class="img">
-                        {{product_list.image}}
-                    </span> -->
-                   
-                    <!-- <a class="btn btn-primary" href="#!">Call to Action!</a> -->
-                   
-                        <!-- <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="../../static/elder2.jpg" alt="..." /></div> -->
-                </div>
-            </div>            
-        </div>
+        {%include 'html/reviewForm.html'%}
             <!-- Call to Action-->
             {%include 'html/newsForm.html'%}
         <!-- Footer-->
