--- a/base/templates/html/index.html
+++ b/base/templates/html/index.html
@@ -47,7 +47,7 @@
                             <img src="../../../static/photos/product_mobility1.jpg" height="250px">
                             <p class="card-text">To provide unlimited acitivity, we create well-equiped wheelchair.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="product/1">More Info</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
@@ -57,7 +57,7 @@
                             <img src="../../../static/photos/product_supplies2.jpg" height="210px">
                             <p class="card-text">It's essential supplies to improve the weaknees of our body parts.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="product/2">More Info</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
@@ -67,7 +67,7 @@
                             <img src="../../../static/photos/product_vision3.jpg" height="250px" width="250px">
                             <p class="card-text">Improving our vision and hearing, various healthcare stuffs are proven by the experiments.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="product/3">More Info</a></div>
                     </div>
                 </div>
             </div>
