--- a/base/templates/html/product.html
+++ b/base/templates/html/product.html
@@ -59,7 +59,7 @@
                         <div class="card h-100" >
                             <div class="card-body" >
                                 <h3 class="card-title">Feather Chair: Only 13.5 pounds*</h3>
-                                <img src="../../static/product_mobility1.jpg" height="250px" width="220px">
+                                <img src="../../../static/photos/product_mobility1.jpg" height="250px" width="220px">
                                 <!-- <p class="card-text">To provide unlimited acitivity, we create well-equiped wheelchair.</p> -->
                             </div>
                             <div class="card-footer"><a class="btn btn-primary btn-sm" href="1">More Info</a></div>
@@ -69,8 +69,8 @@
                         <div class="card h-100">
                             <div class="card-body" style="height:250px">
 
-                                <h2 class="card-title">Feather Scooter</h2>
-                                <img src="../../static/product_mobility2.jpg" height="250px" width="220px">
+                                <h2 class="card-title">Feather Transport Chair</h2>
+                                <img src="../../../static/photos/product_mobility2.jpg" height="250px" width="220px">
                             </div>
                             <div class="card-footer"><a class="btn btn-primary btn-sm" href="2">More Info</a></div>
                         </div>
@@ -79,7 +79,7 @@
                         <div class="card h-100">
                             <div class="card-body">
                                 <h2 class="card-title">Feather HD Chair</h2>
-                                <img src="../../static/product_mobility3.jpg" height="250px"width="220px">
+                                <img src="../../../static/photos/product_mobility3.jpg" height="250px"width="220px">
                             </div>
                             <div class="card-footer"><a class="btn btn-primary btn-sm" href="3">More Info</a></div>
                         </div>
@@ -96,7 +96,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">Wellskin Barriere Silicone Skin Cream</h2>
-                <img src="../../static/product_supplies1.jpg" height="250px" width="220px">
+                <img src="../../../static/photos/product_supplies1.jpg" height="250px" width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="4">More Info</a></div>
         </div>
@@ -105,7 +105,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">Coccyx Orthopedic Seat Cushion</h2>
-                <img src="../../static/product_supplies2.jpg" height="250px" width="220px">
+                <img src="../../../static/photos/product_supplies2.jpg" height="250px" width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="5">More Info</a></div>
         </div>
@@ -114,7 +114,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">GermGuardian 3-in-1 Air Purifier</h2>
-                <img src="../../static/product_supplies3.jpg" height="250px"width="220px">
+                <img src="../../../static/photos/product_supplies3.jpg" height="250px"width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="6">More Info</a></div>
         </div>
@@ -130,7 +130,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">Extra Bold, Large Print Keyboard Stickers</h2>
-                <img src="../../static/product_vision1.jpg" height="250px" width="220px">
+                <img src="../../../static/photos/product_vision1.jpg" height="250px" width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="7">More Info</a></div>
         </div>
@@ -139,7 +139,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">Talking Rx</h2>
-                <img src="../../static/product_vision2.jpg" height="250px" width="220px">
+                <img src="../../../static/photos/product_vision2.jpg" height="250px" width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="8">More Info</a></div>
         </div>
@@ -148,7 +148,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h2 class="card-title">Eye Drop Dispenser</h2>
-                <img src="../../static/product_vision3.jpg" height="250px" width="220px">
+                <img src="../../../static/photos/product_vision3.jpg" height="250px" width="220px">
             </div>
             <div class="card-footer"><a class="btn btn-primary btn-sm" href="9">More Info</a></div>
         </div>
